# pyventory

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/guide/: 01_structure.rst  configuration.rst  index.rst  installation.rst  layout.rst
docs/how-tos/: index.rst  tbd.rst
docs/tutorial/: index.rst
pyventory/: __init__.py  api.py  asset.py  assets.py  base.py  errors.py  export.py  inventory.py  registry.py
pyventory/cli/: pyventory.py
tests/: conftest.py  example.json  test_asset.py  test_errors.py  test_example.py  test_inventory.py
tests/e2e/: example.json  test_example.py
tests/e2e/example/: hosts.py
tests/e2e/example/pyvars/: __init__.py  base_groups.py  env_groups.py  prod_hosts.py  project_groups.py
tests/example/: .gitignore  ansible.json  ansible_hosts.py  hosts.py  terraform.tf  terraform.tf.json  terraform_vars.py
tests/example/inventory/: __init__.py  assets.py  env.py  prod.py  project.py  stages.py
tests/example/pyvars/: stages_hosts.py
tests/unit/: test_inventory.py
tests/unit/cli/: test_pyventory.py
tests/units/: test_cli.py  test_inventory.py
